feat(tasks): add subtasks support
